motion.htmlあたりの作成

--- a/html/motion.html
+++ b/html/motion.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="css/motion.css">
   <style type='text/css'>
     body {font-size: 1.4em;}
   </style>
@@ -21,15 +22,20 @@
 </head>
 <body>
   <br/>
-  <h1>motion display</h1>
+  <h3>motion display</h3>
   <h3>※エラーになったら再読み込み</h3>
   <iframe id="frameScreen"  width="330" height="250" lazyload="on" ></iframe>
+  <br />
 
-  <button id="btn-camera-top" class="btn">上</button>
-  <button id="btn-camera-bottom" class="btn">下</button>
 
-  <button id="btn-camera-left" class="btn">左</button>
-  <button id="btn-camera-right" class="btn">右</button>
+  <div class="cross-layout">
+    <button id="btn-camera-top" class="cross-layout-position-top btn cross-key-btn">▲</button>
+    <button id="btn-camera-left" class="cross-layout-position-left btn cross-key-btn"><span class="left-mark">▲</span></button>
+    <button  class="cross-layout-position-center btn cross-key-btn">●</button>
+    <button id="btn-camera-right" class="cross-layout-position-right btn cross-key-btn"><span class="right-mark">▲</span></button>
+    <button id="btn-camera-bottom"class="cross-layout-position-bottom btn cross-key-btn"><span class="bottom-mark">▲</span></button>
+  </div>
+
 
   <br/>
   <button id="btn-move-index" class="btn" onclick="location.href='index.html'">GoToIndex</button>
