ウェブからシャットダウンできる機能追加

--- a/html/index.html
+++ b/html/index.html
@@ -32,13 +32,16 @@
       </div>
     </div>
 
-    <button id="btn-start-recorder" class="btn" disabled  onclick="location.href='cgi-bin/nph-start.py'">RecorderStart</button>
-    <button id="btn-stop-recorder" class="btn" disabled  onclick="location.href='cgi-bin/nph-stop.py'">RecorderStop</button>
+    <button id="btn-start-recorder" class="btn" disabled  onclick="location.href='cgi-bin/nph-start.py'">録画開始</button>
+    <button id="btn-stop-recorder" class="btn" disabled  onclick="location.href='cgi-bin/nph-stop.py'">録画停止</button>
     <button id="btn-start-motion" class="btn" disabled onclick="location.href='cgi-bin/nph-start-motion.py'">MotionStart</button>
     <button id="btn-stop-motion" class="btn" disabled >MotionStop</button>
 
     <br/><br/>
     <button id="btn-motion-screen" class="btn" disabled onclick="location.href='motion.html'" >MotionMonitor</button>
+    <br/><br/><br/>
+    <button id="btn-shutdwon" class="btn" style="background-color:#FF0000;color: #000000;">システム停止</button>
+    <button id="btn-reboot" class="btn" style="background-color:#FF0000;color: #000000;">システム再起動</button>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
