--- a/html/motion.html
+++ b/html/motion.html
@@ -10,9 +10,6 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="css/motion.css">
-  <style type='text/css'>
-    body {font-size: 1.4em;}
-  </style>
   <script src="js/motion.js"></script>
   <script>
     window.onload = function() {
@@ -22,11 +19,16 @@
 </head>
 <body>
   <br/>
-  <h3>motion display</h3>
-  <h3>※エラーになったら再読み込み</h3>
-  <iframe id="frameScreen"  width="330" height="250" lazyload="on" ></iframe>
-  <br />
+  <h1>motion display</h1>
+  <h1>※エラーになったら再読み込み</h1>
+  <div style="margin-bottom:400px;">
+    <iframe id="frameScreen"  
+      width="350" height="250" lazyload="on" 
+      style="transform:scale(0.55);-o-transform:scale(0.55);-webkit-transform:scale(2.50);-moz-transform:scale(0.55);-ms-transform:scale(0.55);transform-origin:0 0;-o-transform-origin:0 0;-webkit-transform-origin:0 0;-moz-transform-origin:0 0;-ms-transform-origin:0 0;"  >
+    </iframe>
+  </div>
 
+ 
 
   <div class="cross-layout">
     <button id="btn-camera-top" class="cross-layout-position-top btn cross-key-btn">▲</button>
@@ -38,8 +40,8 @@
 
 
   <br/>
-  <button id="btn-move-index" class="btn" onclick="location.href='index.html'">GoToIndex</button>
-  <button id="btn-stop-motion" class="btn" onclick="location.href='cgi-bin/nph-stop-motion.py'" >MotionStop</button>
+  <button id="btn-move-index" class="btn buttonex" onclick="location.href='index.html'">GoToIndex</button>
+  <button id="btn-stop-motion" class="btn buttonex" onclick="location.href='cgi-bin/nph-stop-motion.py'" >MotionStop</button>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
