--- a/html/file_list.html
+++ b/html/file_list.html
@@ -14,7 +14,7 @@
     }
 
 </style>
-<script src="js/index.js"></script>
+<script src="js/file_list.js"></script>
 <script>
     window.onload = function() {
 	init();
@@ -22,9 +22,13 @@
 </script>
 </head>
 <body >
+  <div id="content">
+
+  </div>
+
      <br/>
      <h1><a href='drive/'>一覧(メニュー削除予定)</a><br/></h1>
-     <h1><a href='file_list.html'>一覧</a><br/></h1>
+     <h1><a href='file_list.html/'>一覧</a><br/></h1>
      <h1><a href='mod.html'>映像修正</a><br/></h1>
 
     <div class="container-fluid">
@@ -53,7 +57,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>    
+
 
 </body>
 </html>
