--- a/html/file_list.html
+++ b/html/file_list.html
@@ -23,40 +23,11 @@
 </head>
 <body >
   <div id="content">
-
+    <div id="wait_msg">しばし待たれよ</div>
   </div>
 
-     <br/>
-     <h1><a href='drive/'>一覧(メニュー削除予定)</a><br/></h1>
-     <h1><a href='file_list.html/'>一覧</a><br/></h1>
-     <h1><a href='mod.html'>映像修正</a><br/></h1>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div >
-          <h1 class="text-center">status</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-12">
-          <textarea class="form-control texteriaex" rows="2" placeholder="Received text is show here" id="result" disabled></textarea>
-        </div>
-      </div>
-    </div>
-
-    <button id="btn-start-recorder" class="btn buttonex" disabled  onclick="location.href='cgi-bin/nph-start.py'">録画開始</button>
-    <button id="btn-stop-recorder" class="btn buttonex" disabled  onclick="location.href='cgi-bin/nph-stop.py'">録画停止</button>
-    <button id="btn-start-motion" class="btn buttonex" disabled onclick="location.href='cgi-bin/nph-start-motion.py'">MotionStart</button>
-    <button id="btn-stop-motion" class="btn buttonex" disabled >MotionStop</button>
-
-    <br/><br/>
-    <button id="btn-motion-screen" class="btn buttonex" disabled onclick="location.href='motion.html'" >MotionMonitor</button>
-    <br/><br/>
-    <button id="btn-shutdwon" class="btn buttonex" style="background-color:#FF0000;color: #000000;">システム停止</button>
-    <button id="btn-reboot" class="btn buttonex" style="background-color:#FF0000;color: #000000;">システム再起動</button>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 
 
 </body>
