アップロード調整

--- a/html/motion.html
+++ b/html/motion.html
@@ -41,8 +41,8 @@
 
 
   <br/>
-  <button id="btn-move-index" class="btn buttonex" onclick="location.href='index.html'">GoToIndex</button>
-  <button id="btn-stop-motion" class="btn buttonex" onclick="location.href='cgi-bin/nph-stop-motion.py'" >MotionStop</button>
+  <button id="btn-move-index" class="btn buttonex" onclick="location.href='index.html'">戻る</button>
+  <button id="btn-stop-motion" class="btn buttonex" onclick="location.href='cgi-bin/nph-stop-motion.py'" >監視停止</button>
 
 
 
