--- a/html/index.html
+++ b/html/index.html
@@ -40,13 +40,13 @@
       </div>
     </div>
 
-    <button id="btn-start-recorder" class="btn buttonex" disabled  onclick="location.href='cgi-bin/nph-start.py'">録画開始</button>
-    <button id="btn-stop-recorder" class="btn buttonex" disabled  onclick="location.href='cgi-bin/nph-stop.py'">録画停止</button>
-    <button id="btn-start-motion" class="btn buttonex" disabled onclick="location.href='cgi-bin/nph-start-motion.py'">MotionStart</button>
-    <button id="btn-stop-motion" class="btn buttonex" disabled >MotionStop</button>
+    <button id="btn-start-recorder" class="btn buttonex" disabled  onclick="location.href='cgi-bin/nph-start.py'" style="display:none;" >録画開始</button>
+    <button id="btn-stop-recorder" class="btn buttonex" disabled  onclick="location.href='cgi-bin/nph-stop.py'" style="display:none;">録画停止</button>
+    <button id="btn-start-motion" class="btn buttonex" disabled onclick="location.href='cgi-bin/nph-start-motion.py'">監視開始</button>
+    <button id="btn-stop-motion" class="btn buttonex" disabled >監視停止</button>
 
     <br/><br/>
-    <button id="btn-motion-screen" class="btn buttonex" disabled onclick="location.href='motion.html'" >MotionMonitor</button>
+    <button id="btn-motion-screen" class="btn buttonex" disabled onclick="location.href='motion.html'" >画面を見る</button>
     <br/><br/>
     <button id="btn-shutdwon" class="btn buttonex" style="background-color:#FF0000;color: #000000;">システム停止</button>
     <button id="btn-reboot" class="btn buttonex" style="background-color:#FF0000;color: #000000;">システム再起動</button>
