--- a/html/file_list.html
+++ b/html/file_list.html
@@ -22,7 +22,7 @@
 </script>
 </head>
 <body >
-  <div id="content">
+  <div id="content" style="font-size:40px;padding:20px;">
     <div id="wait_msg">しばし待たれよ</div>
   </div>
 
